kubernetes/mariadb-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  namespace: bankapp-namespace
  labels:
    app: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - name: mariadb
        image: mariadb:11  # Use a specific, stable version for production
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-pv-storage
          mountPath: /var/lib/mysql
          subPath: mysql-data  # Optional: Ensure a subdirectory is used for better volume organization
      volumes:
      - name: mysql-pv-storage
        persistentVolumeClaim:
          claimName: mysql-pvc
