kubernetes/mongodb-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: bankapp-namespace
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:7.0  # Use a specific, stable version for production
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongodb-pv-storage
          mountPath: /data/db
      volumes:
      - name: mongodb-pv-storage
        persistentVolumeClaim:
          claimName: mongodb-pvc
