kubernetes/mongodb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-svc
  namespace: bankapp-namespace
  labels:
    app: mongodb
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  clusterIP: None
