kubernetes/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: bankapp-namespace
  labels:
    app: postgres
spec:
  selector:
    app: postgres
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
